--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
     <h1>
       MINTY AND SOULY
     </h1>
+    <div class="landscape-container">
+      <div class="landscape"></div>
+    </div>
+    <div class="site-body">
+      <div class="bricking">
+
+      </div>
+    </div>
   </body>
 </html>
