--- a/index.html
+++ b/index.html
@@ -6,15 +6,24 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
-    <h1>
-      MINTY AND SOULY
-    </h1>
     <div class="landscape-container">
       <div class="landscape"></div>
     </div>
     <div class="site-body">
       <div class="bricking">
-
+        <div class="logo-container">
+          <img class="logo" src="./assets/logo/logo.svg" alt="">
+          <img class="wordmark" src="./assets/logo/wordmark.svg" alt="">
+        </div>
+      </div>
+      <div class="contents">
+        <div class="content-item">
+          <img src="./assets/images/ItsyBlitzy_capsule_main.png" alt="">
+        </div>
+      </div>
+      <div class="footer">
+        <p>Created by Jake Piccolo</p>
+        <p>@jakepic1</p>
       </div>
     </div>
   </body>
