Add content item styling

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       <div class="contents">
         <div class="content-item">
           <img src="./assets/images/ItsyBlitzy_capsule_main.png" alt="">
+          <div class="content-item-text">
+            <p class="content-item-title">Itsy Blitzy</p>
+            <p>Not your average bullet hell, Itsy Blitzy’s melee-focused arcade style combat means every fight is full of fast-paced risk vs reward.</p>
+            <p>Coming very soon to Steam for PC.</p>
+          </div>
         </div>
       </div>
       <div class="footer">
