General contents complete

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="logo-container">
           <img class="logo" src="./assets/logo/logo.svg" alt="">
           <img class="wordmark" src="./assets/logo/wordmark.svg" alt="">
+          <p class>REFRESHMENT IN DYSTOPIA</p>
         </div>
       </div>
       <div class="contents">
@@ -23,6 +24,13 @@
             <p class="content-item-title">Itsy Blitzy</p>
             <p>Not your average bullet hell, Itsy Blitzy’s melee-focused arcade style combat means every fight is full of fast-paced risk vs reward.</p>
             <p>Coming very soon to Steam for PC.</p>
+          </div>
+        </div>
+        <div class="content-item">
+          <img src="./assets/images/ItsyBlitzy_capsule_main.png" alt="">
+          <div class="content-item-text">
+            <p class="content-item-title">TBD</p>
+            <p>The next game is in the works.</p>
           </div>
         </div>
       </div>
