Add gradient styling

--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
           </div>
         </div>
         <div class="content-item">
-          <div class="question-mark">
-            ?
-          </div>
-          <!-- <img src="./assets/images/ItsyBlitzy_capsule_main.png" alt=""> -->
+          <div class="question-mark">?</div>
           <div class="content-item-text">
             <p class="content-item-title">TBD</p>
             <p>The next game is in the works.</p>
