--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Minty Soul Games</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
@@ -12,7 +13,9 @@
     <div class="site-body">
       <div class="bricking">
         <div class="logo-container">
-          <img class="logo" src="./assets/logo/logo.svg" alt="">
+          <div class="logo-shine">
+            <img class="logo" src="./assets/logo/logo.svg" alt="">
+          </div>
           <img class="wordmark" src="./assets/logo/wordmark.svg" alt="">
           <p class>REFRESHMENT IN DYSTOPIA</p>
         </div>
