--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
       </div>
       <div class="contents">
         <div class="content-item">
-          <img src="./assets/images/ItsyBlitzy_capsule_main.png" alt="">
+          <a href="https://itsyblitzy.com/" target="_blank" alt="">
+            <img src="./assets/images/ItsyBlitzy_capsule_main.png">
+          </a>
           <div class="content-item-text">
-            <p class="content-item-title">Itsy Blitzy</p>
-            <p>Not your average bullet hell, Itsy Blitzy’s melee-focused arcade style combat means every fight is full of fast-paced risk vs reward.</p>
+            <a class="content-item-title" href="https://itsyblitzy.com/" target="_blank">Itsy Blitzy</a>
+            <p>Not your average bullet hell, Itsy Blitzy’s melee-focused arcade
+              style combat means every fight is full of fast-paced risk vs reward.</p>
             <p>Coming very soon to Steam for PC.</p>
           </div>
         </div>
@@ -39,7 +42,7 @@
       </div>
       <div class="footer">
         <p>Created by Jake Piccolo</p>
-        <p>@jakepic1</p>
+        <a href="https://twitter.com/jakepiccolo" target="_blank">@jakepiccolo</a>
       </div>
     </div>
   </body>
