--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Minty Soul Games</title>
+    <link rel="shortcut icon" type="image/png" href="./assets/logo/favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
