Fix weird text sizing issue with wrapping div on first content item

--- a/index.html
+++ b/index.html
@@ -22,24 +22,28 @@
         </div>
       </div>
       <div class="contents">
-        <div class="content-item">
-          <a href="https://itsyblitzy.com/" target="_blank" alt="">
-            <img src="./assets/images/ItsyBlitzy_capsule_main.png">
-          </a>
-          <div class="content-item-text">
-            <a class="content-item-title" href="https://itsyblitzy.com/" target="_blank">Itsy Blitzy</a>
-            <p>Not your average bullet hell, Itsy Blitzy’s melee-focused arcade
-              style combat means every fight is full of fast-paced risk vs reward.</p>
-            <p>Coming very soon to Steam for PC.</p>
-          </div>
+        <div class="">
+          <div class="content-item">
+            <a href="https://itsyblitzy.com/" target="_blank" alt="">
+              <img src="./assets/images/ItsyBlitzy_capsule_main.png">
+            </a>
+            <div class="content-item-text">
+              <a class="content-item-title" href="https://itsyblitzy.com/" target="_blank">Itsy Blitzy</a>
+              <p>Not your average bullet hell, Itsy Blitzy’s melee-focused arcade
+                style combat means every fight is full of fast-paced risk vs reward.</p>
+                <p>Coming very soon to Steam for PC.</p>
+              </div>
+            </div>
         </div>
+
         <div class="content-item">
-          <div class="question-mark">?</div>
+          <div class="question-mark"> ? </div>
           <div class="content-item-text">
             <p class="content-item-title">TBD</p>
             <p>The next game is in the works.</p>
           </div>
         </div>
+
       </div>
       <div class="footer">
         <p>Created by Jake Piccolo</p>
