--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Minty Soul Games</title>
     <link rel="shortcut icon" type="image/png" href="./assets/logo/favicon.png"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
@@ -22,6 +23,7 @@
         </div>
       </div>
       <div class="contents">
+
         <div class="">
           <div class="content-item">
             <a href="https://itsyblitzy.com/" target="_blank" alt="">
@@ -31,9 +33,9 @@
               <a class="content-item-title" href="https://itsyblitzy.com/" target="_blank">Itsy Blitzy</a>
               <p>Not your average bullet hell, Itsy Blitzy’s melee-focused arcade
                 style combat means every fight is full of fast-paced risk vs reward.</p>
-                <p>Coming very soon to Steam for PC.</p>
-              </div>
+              <p>Coming very soon to Steam for PC.</p>
             </div>
+          </div>
         </div>
 
         <div class="content-item">
