Minor copy changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img class="logo" src="./assets/logo/logo.svg" alt="">
           </div>
           <img class="wordmark" src="./assets/logo/wordmark.svg" alt="">
-          <p class>REFRESHMENT IN DYSTOPIA</p>
+          <p class>Refresh Yourself</p>
         </div>
       </div>
       <div class="contents">
@@ -32,7 +32,7 @@
             <div class="content-item-text">
               <a class="content-item-title" href="https://itsyblitzy.com/" target="_blank">Itsy Blitzy</a>
               <p>Not your average bullet hell, Itsy Blitzy’s melee-focused arcade
-                style combat means every fight is full of fast-paced risk vs reward.</p>
+                style combat means every fight is full of fast-paced risks and rewards.</p>
               <p>Coming very soon to Steam for PC.</p>
             </div>
           </div>
