Update images for for better speed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="">
           <div class="content-item">
             <a href="https://itsyblitzy.com/" target="_blank" alt="">
-              <img src="./assets/images/ItsyBlitzy_capsule_main.png">
+              <img src="./assets/images/ItsyBlitzy_capsule_main.jpg">
             </a>
             <div class="content-item-text">
               <a class="content-item-title" href="https://itsyblitzy.com/" target="_blank">Itsy Blitzy</a>
